<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".QuizEditActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:context=".QuestionEditFragment">

        <!-- TODO: Update blank fragment layout -->

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="auto"
                android:focusableInTouchMode="true">

                <EditText
                    android:id="@+id/questionDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:inputType="textNoSuggestions"
                    android:text="@string/description"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/questionItems"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:maxWidth="280dp"
                    app:layout_constraintStart_toStartOf="@+id/questionDescription"
                    app:layout_constraintTop_toBottomOf="@+id/questionDescription" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/questioncounter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/_0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="12dp">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/backButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:alpha="1"
                android:clickable="true"
                android:contentDescription="@string/go_to_last_question"
                android:focusable="true"
                app:srcCompat="@drawable/ic_leftarrow" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:alpha="1"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="12dp">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/removeButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:alpha="1"
                android:clickable="true"
                android:contentDescription="@string/remove_question"
                android:focusable="true"
                app:srcCompat="@drawable/ic_remove" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:alpha="1"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="12dp">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/addButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:alpha="1"
                android:clickable="true"
                android:contentDescription="@string/add_new_question"
                android:focusable="true"
                app:srcCompat="@drawable/ic_add" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:alpha="1"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="12dp">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/nextButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:clickable="true"
                android:contentDescription="@string/go_to_next_question"
                android:focusable="true"
                app:srcCompat="@drawable/ic_rightarrow" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>